[gd_scene load_steps=13 format=3 uid="uid://mkfcbmtujvxv"]

[ext_resource type="Script" path="res://scenes/ui/game_over/game_over.gd" id="1_f4ejs"]
[ext_resource type="Texture2D" uid="uid://ba77ttaupd1ln" path="res://assets/section-sky-1.png" id="2_hcs3m"]
[ext_resource type="PackedScene" uid="uid://by65ps6pypqvf" path="res://scenes/game/cloud/cloud.tscn" id="3_m4q3q"]
[ext_resource type="PackedScene" uid="uid://dk6f72amqtpfo" path="res://scenes/ui/cupcakes/solid_blue_dollop_happy.tscn" id="7_vfs1i"]
[ext_resource type="PackedScene" uid="uid://bcu3euevue277" path="res://scenes/ui/cupcakes/solid_green_dollop_happy.tscn" id="8_b2sao"]
[ext_resource type="PackedScene" uid="uid://dgt2esjv0tka1" path="res://scenes/ui/cupcakes/solid_lime_dollop_happy.tscn" id="9_vel5a"]
[ext_resource type="PackedScene" uid="uid://bgptinrbvsdmj" path="res://scenes/ui/cupcakes/solid_orange_dollop_happy.tscn" id="10_xy6dq"]
[ext_resource type="PackedScene" uid="uid://26vnsxaodoge" path="res://scenes/ui/cupcakes/solid_pink_dollop_happy.tscn" id="11_2xieh"]
[ext_resource type="PackedScene" uid="uid://d0f3dp66tf40v" path="res://scenes/ui/cupcakes/solid_salmon_dollop_happy.tscn" id="12_nok6t"]
[ext_resource type="Texture2D" uid="uid://cejp3cf4su8fu" path="res://assets/window2-blue.png" id="15_t4ks5"]
[ext_resource type="Texture2D" uid="uid://bfd5lnqqbk1d7" path="res://assets/g15535.png" id="17_4p5k5"]
[ext_resource type="Texture2D" uid="uid://dihj4fnwadl6u" path="res://assets/g18213.png" id="17_d0yjr"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f4ejs")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -319.0
offset_top = -731.0
offset_right = 466.0
offset_bottom = 669.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hcs3m")

[node name="Cloud" parent="TextureRect3" instance=ExtResource("3_m4q3q")]
position = Vector2(2032, 1404)

[node name="CloudTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="Label2" type="Label" parent="."]
layout_mode = 1
offset_left = -3.0
offset_top = -10.5
offset_right = 1155.0
offset_bottom = 196.5
theme_override_colors/font_color = Color(0.501961, 0.807843, 0.921569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.431373)
theme_override_colors/font_outline_color = Color(0.12549, 0.356863, 0.541176, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 160
text = "Game Over
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Window2-blue" type="Sprite2D" parent="."]
position = Vector2(575.5, 362)
scale = Vector2(0.21308, 0.185654)
texture = ExtResource("15_t4ks5")

[node name="Play" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = -76.0
offset_right = 138.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("17_4p5k5")
texture_pressed = ExtResource("17_d0yjr")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -41.5
offset_right = 85.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.501961, 0.807843, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0.12549, 0.356863, 0.541176, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 48
text = "Play Again"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = 47.0
offset_right = 138.5
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("17_4p5k5")
texture_pressed = ExtResource("17_d0yjr")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -41.5
offset_right = 85.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.501961, 0.807843, 0.921569, 1)
theme_override_colors/font_outline_color = Color(0.12549, 0.356863, 0.541176, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 48
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -173.0
offset_right = 147.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.501961, 0.807843, 0.921569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.431373)
theme_override_colors/font_outline_color = Color(0.12549, 0.356863, 0.541176, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 64
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SolidOrangeDollopHappy" parent="." instance=ExtResource("10_xy6dq")]
layout_mode = 0
offset_left = 801.0
offset_top = 207.0
offset_right = 1001.0
offset_bottom = 407.0

[node name="SolidPinkDollopHappy" parent="." instance=ExtResource("11_2xieh")]
layout_mode = 0
offset_left = 901.0
offset_top = 299.0
offset_right = 1101.0
offset_bottom = 499.0
rotation = 0.183333

[node name="SolidSalmonDollopHappy" parent="." instance=ExtResource("12_nok6t")]
layout_mode = 0
offset_left = 700.0
offset_top = 380.0
offset_right = 900.0
offset_bottom = 580.0
rotation = -0.33075

[node name="SolidBlueDollopHappy" parent="." instance=ExtResource("7_vfs1i")]
layout_mode = 0
offset_left = 162.0
offset_top = 207.0
offset_right = 362.0
offset_bottom = 407.0

[node name="SolidGreenDollopHappy" parent="." instance=ExtResource("8_b2sao")]
layout_mode = 0
offset_left = 238.0
offset_top = 334.0
offset_right = 438.0
offset_bottom = 534.0
rotation = 0.129008

[node name="SolidLimeDollopHappy" parent="." instance=ExtResource("9_vel5a")]
layout_mode = 0
offset_left = 52.0
offset_top = 362.0
offset_right = 252.0
offset_bottom = 562.0
rotation = -0.237359

[connection signal="timeout" from="CloudTimer" to="." method="_on_cloud_timer_timeout"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
